# vibes-copy-manager

./: INSTALLATION.md  README.md  install.sh  package-lock.json  uninstall.sh
.github/workflows/: release.yml
src/: app.js  clipboard.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  config.rs  engine.rs  lib.rs  main.rs  persistence.rs  window.rs
