[package]
name = "vibes-copy-manager"
version = "0.1.0"
description = "Modern clipboard manager with clean UI"
authors = ["you"]
edition = "2021"

[lib]
name = "vibes_copy_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
