[package]
name = "vibes-copy-manager"
version = "0.3.0"
description = "Modern clipboard manager with CLI and GUI"
authors = ["you"]
edition = "2021"
default-run = "vibes-copy-manager"

[lib]
name = "vibes_copy_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vibes-copy-manager"
path = "src/main.rs"

[[bin]]
name = "vcm"
path = "src/bin/vcm.rs"
required-features = []

[features]
default = ["gui"]
gui = [
    "dep:tauri",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-global-shortcut",
    "dep:tauri-build",
    "dep:png",
    "dep:base64",
]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = { version = "3", features = ["image-data"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }

tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
png = { version = "0.17", optional = true }
